--- a/style.css
+++ b/style.css
@@ -732,7 +732,7 @@ video {
   display: flex;
   align-items: center;
   flex-direction: column;
-  background-image: url('assets/banner3.jpg');
+  background-image: url('assets/banner01.jpg');
   width: 100%;
   height: 700px;
   background-size: cover;
@@ -814,7 +814,7 @@ video {
   padding: 20px;
   width: 800px;
   border-radius: 20px;
-  text-shadow: 2px 1px 2px #000000;
+  text-shadow: 2px 2px 2px #000000;
   color: white;
 }
 
@@ -823,8 +823,8 @@ video {
 }
 
 .paralax-text01 h5 {
-  font-weight: 900;
-  font-size: 30px;
+  font-weight: 600;
+  font-size: 26px;
 }
 
 #header.rolagem+.paralax-text01 {
@@ -920,6 +920,13 @@ header {
   transition: background-color 0.3s, transform 0.3s;
 }
 
+.btn-paralax-bottom{
+  width: 250px;
+
+}
+
+
+
 @media (max-width: 660px) {
   .paralax-text01 {
     width: 300px;
@@ -950,4 +957,5 @@ header {
 
   .paralax-text01 h5 {
     text-align: center !important;
+    margin-top: 20px;
   }
