--- a/style.css
+++ b/style.css
@@ -4,6 +4,11 @@
   font-family: "quicksand", "Poppins", sans-serif;
 }
 
+a {
+  text-decoration: none;
+  color: inherit; 
+}
+
 ul {
   list-style-type: none;
   /* Remove os marcadores da lista */
@@ -113,6 +118,288 @@ ul {
     width: 50%;
   }
 }
+
+
+
+/*-----------paralax02--------*/
+.paralax-Img01 {
+  position: relative;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  background-image: url('assets/banner01.jpg');
+  width: 100%;
+  height: 700px;
+  background-size: cover;
+  background-repeat: no-repeat;
+  box-shadow: inset 6px 6px 13px 2px rgba(0, 0, 0, 0.295);
+  background-attachment: fixed;
+}
+
+.navbar-brand {
+  height: 100px;
+  margin-left: 10px;
+  margin-bottom: 12px;
+}
+
+.navbar-brand img {
+  width: 100px;
+  margin-top: -10px;
+  margin-left: 40px;
+  transition: transform 0.3s ease, opacity 0.3s ease;
+}
+
+
+.navbar-custom {
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.507);
+  margin-top: 5px;
+  color: white;
+  transition: top 1s;
+}
+
+/* Estilo para o menu colapsado */
+.navbar-collapse.show {
+  background-color: blue;
+  z-index: 100;
+  margin-left: -10px;
+}
+
+/* Estilo dos itens do menu quando colapsado */
+.navbar-collapse .nav-link {
+  color: white;
+}
+
+.navbar-nav {
+  margin-left: 200px;
+}
+
+.navbar-nav .nav-item {
+  margin-right: 15px;
+}
+
+.navbar-nav.open {
+  margin-left: 10px;
+}
+
+#header {
+  background-color: transparent;
+  transition: background-color 0.5s ease, padding 0.5s ease;
+}
+
+#header.rolagem {
+  background-color: rgba(0, 0, 0, 0.8);
+  padding: 10px 0;
+}
+
+.paralax-h3 {
+  font-size: 60px;
+  margin-bottom: 20px;
+
+}
+
+.paralax-text01 {
+  position: absolute;
+  top: 20%;
+  left: 2%;
+  transition: opacity 0.5s ease;
+  display: flex;
+  flex-direction: column;
+  text-align: left;
+  padding: 20px;
+  width: 800px;
+  border-radius: 20px;
+  text-shadow: 2px 2px 2px #000000;
+  color: white;
+}
+
+.paralax-text01 h3 {
+  font-weight: 900;
+}
+
+.paralax-text01 h5 {
+  font-weight: 600;
+  font-size: 26px;
+}
+
+#header.rolagem+.paralax-text01 {
+  opacity: 0.5;
+}
+
+.navbar-custom.rolagem {
+  position: fixed;
+  top: 0;
+  z-index: 1000;
+  margin-top: 0;
+  height: 100px;
+}
+
+#header.rolagem .navbar-brand img {
+  transform: scale(0.8);
+  opacity: 0.8;
+}
+
+.nav-item-2 li a,
+.nav-item-3 li a {
+  color: black;
+  font-weight: 900;
+
+  /* Mantenha apenas uma cor comum, se aplicável */
+}
+
+.nav-item-3:hover {
+  background-color: #2e7aac;
+}
+
+
+.button-nav-paralax {
+  width: 150px !important;
+  color: rgb(0, 0, 0);
+}
+
+header {
+  position: fixed;
+  top: 0;
+}
+
+.btn-contato {
+  border-radius: 10px;
+}
+
+.nav-bar1 {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-around;
+  position: absolute;
+  top: 8%;
+  width: 100vw;
+}
+
+
+.button1-paralax,
+.button2-paralax {
+  cursor: pointer;
+  font-size: 18px;
+  font-weight: 500;
+  padding: 10px;
+  border-radius: 40px;
+  z-index: 10;
+  margin: 30px;
+  box-shadow: 1px 1px 2px #0000006c;
+  text-shadow: 1px 1px 1px #000000;
+}
+
+.button1-paralax {
+  color: white;
+  background-color: #069c1c;
+}
+
+.button1-paralax:hover {
+  transform: translateY(-20px);
+  font-size: 20px;
+  background-color: red;
+  transition: background-color 0.3s, transform 0.3s;
+}
+
+.button2-paralax {
+  color: white;
+  background-color: #ffffff19;
+  border: 2px solid #fffffff2;
+}
+
+.button2-paralax:hover {
+  transform: translateY(-20px);
+  background-color: #ffffff;
+  color: #000000;
+  transition: background-color 0.3s, transform 0.3s;
+}
+
+.btn-paralax-bottom{
+  width: 250px;
+
+}
+
+
+
+@media (max-width: 660px) {
+  .paralax-text01 {
+    width: 300px;
+  }
+
+  .container-button-paralax {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 10px;
+  }
+
+
+  .paralax-text01 h3 {
+    font-weight: 700;
+    font-size: 40px;
+    text-align: center !important;
+  }
+
+  .paralax-text01 {
+    padding: 20px;
+    margin-left: 10%;
+  }
+
+  .paralax-h3 {
+    margin: 0;
+  }
+
+
+  .paralax-text01 h5 {
+    text-align: center !important;
+    margin-top: 20px;
+  }
+}
+
+/*-----------show-case-01--------*/
+
+.showcase{
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  overflow: hidden;
+  margin: auto;
+}
+
+.showcase-title{
+  display: flex;
+  flex-direction: column;
+  margin: 50px;
+}
+.showcase-title h3{
+  color: #b99671;
+  font
+}
+.showcase-card-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+}
+.showcase-card {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: space-between;
+  background-color: yellow;
+  width: 360px;
+  height: 400px;
+  margin: 4px;
+  padding: 20px;
+  margin-bottom: 10px;
+}
+.showcase-txt-p{
+  height: 100px;
+  background-color: blue;
+  text-overflow: ellipsis;
+
+}
+
+
 
 /*-------call-to-action-1-----------*/
 
@@ -724,238 +1011,3 @@ video {
   }
 }
 
-
-
-/*-----------paralax02--------*/
-.paralax-Img01 {
-  position: relative;
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-  background-image: url('assets/banner01.jpg');
-  width: 100%;
-  height: 700px;
-  background-size: cover;
-  background-repeat: no-repeat;
-  box-shadow: inset 6px 6px 13px 2px rgba(0, 0, 0, 0.295);
-  background-attachment: fixed;
-}
-
-.navbar-brand {
-  height: 100px;
-  margin-left: 10px;
-  margin-bottom: 12px;
-}
-
-.navbar-brand img {
-  width: 100px;
-  margin-top: -10px;
-  margin-left: 40px;
-  transition: transform 0.3s ease, opacity 0.3s ease;
-}
-
-
-.navbar-custom {
-  width: 100%;
-  background-color: rgba(0, 0, 0, 0.507);
-  margin-top: 5px;
-  color: white;
-  transition: top 1s;
-}
-
-/* Estilo para o menu colapsado */
-.navbar-collapse.show {
-  background-color: blue;
-  z-index: 100;
-  margin-left: -10px;
-}
-
-/* Estilo dos itens do menu quando colapsado */
-.navbar-collapse .nav-link {
-  color: white;
-}
-
-.navbar-nav {
-  margin-left: 200px;
-}
-
-.navbar-nav .nav-item {
-  margin-right: 15px;
-}
-
-.navbar-nav.open {
-  margin-left: 10px;
-}
-
-#header {
-  background-color: transparent;
-  transition: background-color 0.5s ease, padding 0.5s ease;
-}
-
-#header.rolagem {
-  background-color: rgba(0, 0, 0, 0.8);
-  padding: 10px 0;
-}
-
-.paralax-h3 {
-  font-size: 60px;
-  margin-bottom: 20px;
-
-}
-
-.paralax-text01 {
-  position: absolute;
-  top: 20%;
-  left: 2%;
-  transition: opacity 0.5s ease;
-  display: flex;
-  flex-direction: column;
-  text-align: left;
-  padding: 20px;
-  width: 800px;
-  border-radius: 20px;
-  text-shadow: 2px 2px 2px #000000;
-  color: white;
-}
-
-.paralax-text01 h3 {
-  font-weight: 900;
-}
-
-.paralax-text01 h5 {
-  font-weight: 600;
-  font-size: 26px;
-}
-
-#header.rolagem+.paralax-text01 {
-  opacity: 0.5;
-}
-
-.navbar-custom.rolagem {
-  position: fixed;
-  top: 0;
-  z-index: 1000;
-  margin-top: 0;
-  height: 100px;
-}
-
-#header.rolagem .navbar-brand img {
-  transform: scale(0.8);
-  opacity: 0.8;
-}
-
-.nav-item-2 li a,
-.nav-item-3 li a {
-  color: black;
-  font-weight: 900;
-
-  /* Mantenha apenas uma cor comum, se aplicável */
-}
-
-.nav-item-3:hover {
-  background-color: #2e7aac;
-}
-
-
-.button-nav-paralax {
-  width: 150px !important;
-  color: rgb(0, 0, 0);
-}
-
-header {
-  position: fixed;
-  top: 0;
-}
-
-.btn-contato {
-  border-radius: 10px;
-}
-
-.nav-bar1 {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-around;
-  position: absolute;
-  top: 8%;
-  width: 100vw;
-}
-
-
-.button1-paralax,
-.button2-paralax {
-  cursor: pointer;
-  font-size: 18px;
-  font-weight: 500;
-  padding: 10px;
-  border-radius: 40px;
-  z-index: 10;
-  margin: 30px;
-  box-shadow: 1px 1px 2px #0000006c;
-  text-shadow: 1px 1px 1px #000000;
-}
-
-.button1-paralax {
-  color: white;
-  background-color: #069c1c;
-}
-
-.button1-paralax:hover {
-  transform: translateY(-20px);
-  font-size: 20px;
-  background-color: red;
-  transition: background-color 0.3s, transform 0.3s;
-}
-
-.button2-paralax {
-  color: white;
-  background-color: #ffffff19;
-  border: 2px solid #fffffff2;
-}
-
-.button2-paralax:hover {
-  transform: translateY(-20px);
-  background-color: #ffffff;
-  color: #000000;
-  transition: background-color 0.3s, transform 0.3s;
-}
-
-.btn-paralax-bottom{
-  width: 250px;
-
-}
-
-
-
-@media (max-width: 660px) {
-  .paralax-text01 {
-    width: 300px;
-  }
-
-  .container-button-paralax {
-    display: flex;
-    flex-direction: column;
-    margin-bottom: 10px;
-  }
-
-
-  .paralax-text01 h3 {
-    font-weight: 700;
-    font-size: 40px;
-    text-align: center !important;
-  }
-
-  .paralax-text01 {
-    padding: 20px;
-    margin-left: 10%;
-  }
-
-  .paralax-h3 {
-    margin: 0;
-  }
-
-
-  .paralax-text01 h5 {
-    text-align: center !important;
-    margin-top: 20px;
-  }
