--- a/style.css
+++ b/style.css
@@ -4,10 +4,17 @@
   font-family: "quicksand", "Poppins", sans-serif;
 }
 
+html, body {
+  overflow-x: hidden;
+}
+* p {
+  font-weight: 740;
+}
 a {
   text-decoration: none;
-  color: inherit; 
+  color: inherit;
 }
+
 
 ul {
   list-style-type: none;
@@ -315,7 +322,7 @@ header {
   transition: background-color 0.3s, transform 0.3s;
 }
 
-.btn-paralax-bottom{
+.btn-paralax-bottom {
   width: 250px;
 
 }
@@ -358,7 +365,7 @@ header {
 
 /*-----------show-case-01--------*/
 
-.showcase{
+.showcase {
   display: flex;
   flex-direction: column;
   width: 100%;
@@ -366,40 +373,64 @@ header {
   margin: auto;
 }
 
-.showcase-title{
+.showcase-title {
   display: flex;
   flex-direction: column;
   margin: 50px;
 }
-.showcase-title h3{
+
+.showcase-title h3 {
   color: #b99671;
-  font
 }
+
 .showcase-card-container {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-evenly;
 }
+
+.showcase-card:hover {
+  border: 1px solid #b99671;
+
+}
+
 .showcase-card {
   display: flex;
   align-items: center;
   flex-direction: column;
   justify-content: space-between;
-  background-color: yellow;
+  background-color: rgb(255, 255, 255);
   width: 360px;
   height: 400px;
   margin: 4px;
   padding: 20px;
   margin-bottom: 10px;
+  border: 1px solid transparent;
+  transition: border 0.4s;
+  transition: transform 0.3s ease;
+  cursor: pointer;
+
 }
-.showcase-txt-p{
+
+.showcase-card:hover {
+  width: 380px;
+  height: 420px;
+  box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.15);
+  transform: scale(1.05);
+}
+
+.showcase-txt-p {
   height: 100px;
-  background-color: blue;
+  background-color: rgb(255, 255, 255);
   text-overflow: ellipsis;
+  height: 90px;
+  overflow: hidden;
 
 }
 
-
+.text-gold {
+  color: #b99671;
+}
 
 /*-------call-to-action-1-----------*/
 
@@ -593,7 +624,7 @@ header {
 .cta-button01 {
   width: 100%;
   position: absolute;
-  q z-index: 5;
+  z-index: 5;
   top: 80%;
   width: 150px;
   left: 28%;
@@ -1010,4 +1041,3 @@ video {
     /* Ajusta a posição do texto para dispositivos móveis */
   }
 }
-
